unified_tests/literals/list_literal_incomplete_binary_expression/expect/build.text.stderr
lib.copp:2:16: error: expected expression
      _x := [1 + ]
                 ^
lib.copp:5:1: error: expected symbol
  
lib.copp:5:1: error: expected symbol
  
